<resources>
    <string name="boaringclass">Boaring Class</string>
    <string name="likeyoubro">Like you Bro</string>
    <string name="askme">Ask Me!</string>
    <string name="stickerchannel">Sticker Channel</string>
    <string name="gifchannel">Gif Channel</string>
    <string name="musicalbum">Full Music Albums</string>
    <string name="programmerjokes">Programmer Jokes</string>
    <string name="commonmistakes">Common Mistakes</string>
    <string name="crynet">Crynet</string>
    <string name="tvshare">i TV Share</string>
    <string name="sickmind">Sick mind Media</string>
    <string name="moviehd">Movie HD Channel</string>
    <string name="sickosadism">Sickosadism</string>
    <string name="yourAdd">کانال شما</string>
    <string name="varzesh3">ورزش سه</string>
    <string name="khabarefori">خبر فوری</string>
    <string name="khoroosjangi">خروس جنگی</string>
    <string name="bedandid">بدندید</string>
    <string name="gizmiz">گیزمیز</string>
    <string name="jokefarsi">جوک فارسی</string>
    <string name="alvandmusic">الوند موزیک</string>
    <string name="yjc">باشگاه خبرنگاران جوان</string>
    <string name="pandaneh">پندانه</string>
    <string name="axojoke">عکس و جوک</string>
    <string name="ajibvalivaghei">عجیب ولی واقعی</string>
    <string name="dirindirin">دیرین دیرین</string>
    <string name="coffeegram">کافی گرام</string>
    <string name="drsalamat">دکتر سلامت</string>
    <string name="lezateashpazi">لذت آشپزی</string>
    <string name="farsna">خبرگذاری فارس</string>
    <string name="channel90">کانال 90</string>
    <string name="eslahatnews">اصلاحات نیوز</string>
    <string name="donyayeashpazi">دنیای آشپزی</string>
    <string name="isna">خبرگذاری ایسنا</string>
    <string name="golagha">گل آقا</string>
    <string name="rajanews">رجا نیوز</string>
    <string name="khandevaneh">خندوانه</string>
    <string name="digiato">دیجیاتو</string>
    <string name="varzesh">شبکه ورزش</string>
    <string name="app_name">تلگرام وایا</string>
    <string name="mailus">ارتباط از طریق ایمیل</string>
    <string name="telegramus">ارتباط از طریق تلگرام</string>
    <string name="resourceTitle">منابع استفاده شده در اپلیکیشن</string>
    <string name="resource1">www.gsm.ir</string>
    <string name="resource2">www.stickerstelegram.com</string>
    <string name="resource3">www.telegram.org/blog/stickers-revolution</string>
    <string name="resource4">www.channelsfortelegram.com</string>
    <string name="downloadstickers">دریافت استیکر</string>
    <string name="next">بعدی</string>
    <string name="previous">قبلی</string>
    <string name="vaya">vaya-group.org</string>
    <string name="stickerName">Elephant</string>
    <string name="gotocategories">دسته بندی ها</string>
    <string name="returnToHints">بازگشت</string>
    <string name="sticker">استیکرها</string>
    <string name="hints">ترفندها</string>
    <string name="groups">کانال ها</string>
    <string name="contact">درباره ما</string>
    <string name="add">برای ثبت کانال و استیکر های خود به ما پیغام بدهید</string>
    <string name="khareji">خارجی</string>
    <string name="irani">ایرانی</string>
    <string name="menu">منوی اصلی</string>
    <string name="channels">کانال ها</string>
    <string name="hintsButton">لیست ترفند ها و آموزش ها</string>
    <string name="hintListText">موضوع مورد نظر را انتخاب کنید</string>
    <string name="hint1">ارسال به خودی!</string>
    <string name="hint2">تصاویر را بدون افت کیفیت ارسال کنید</string>
    <string name="hint3">مشاهده مطالب کانال‌های مورد نظر بدون عضویت در آن‌ها</string>
    <string name="hint4">حذف مخاطب یا Contact</string>
    <string name="hint5">حذف کامل اکانت و فعالیت‌های قبلی شما در تلگرام</string>
    <string name="hint6">حذف تصاویر پروفایلی که قبلا از آنها استفاده کرده‌اید</string>
    <string name="hint7">صرفه‌جویی قابل توجه در مصرف اینترنت تنها با یک تنظیم ساده</string>
    <string name="hint8">ایجاد نظرسنجی در داخل گروه‌های تلگرامی</string>
    <string name="hint9">تغییر شماره تلفن در تلگرام</string>
    <string name="hint10">جلوگیری از اضافه شدن ناخواسته به گروه‌ها</string>
    <string name="hint11"> پيام‌هاي دريافتي را بدون آنکه فرستنده متوجه شود مشاهده کنيد</string>
    <string name="hint12">رنگ اختصاصي چراغ LEDتلفن همراه براي پيام‌هاي تلگرامي</string>
    <string name="hint13">تجربه استفاده از تلگرام با زبان فارسي</string>
    <string name="hint14">حذف فايل‌هاي قديمي اشغال‌شده روي تلفن همراه</string>
    <string name="hint15">با غلط‌هاي املايي و ارسال پيام‌هاي اشتباهي به گروه‌ها و افراد خداحافظي کنيد</string>
    <string name="hint16">اضافه کردن متن به تصوير GIF</string>
    <string name="hint17"> اجراي همزمان چند اکانت تلگرام</string>
    <string name="hint18">مخفي‌سازي آخرين بازديدها براي مخاطبانتان</string>
    <string name="hint19">از کجا بفهميم از جانب يک نفر خاص بلاک شده‌ايم يا او اکانتش را حذف کرده؟</string>
    <string name="hint20">ساخت دکمه‌هاي شيشه‌اي!</string>
    <string name="hintcontext1">شاید برای شما هم اتفاق بیفتد که یک پک استیکر دانلود کنید و قصد داشته باشید محتویات پک را چک کنید تا ببینید که مناسب مخاطبان شما هست یا نه. یا مثلا بخواهید ویدئو آپلود کنید، ولی سابقه داشته که ویدئوی آپلودشده بدون صدا باشد یا اصلا پخش نشود! پس بهتر است ابتدا در محلی آپلودش کنید که بقیه نمی‌بینند! علاوه بر آن، اگر شما هم مثل من همیشه نکات مهمی را که در طول روز به آنها نیاز دارید جایی یادداشت می‌کنید تا سرفرصت آنها را طبق لیست انجام دهید، با استفاده از این ترفند می‌توانید یک دفترچه یادداشت خصوصی برای خود در تلگرام داشته باشید. حتی برای تبادل فایل از یک دستگاه به دستگاه دیگر نیز می‌توانید از این ترفند استفاده کنید و درواقع می‌توانید از صفحه خودتان مانند حافظه جانبی یا کول دیسک آنلاین استفاده کنید.

همان طور که می‌دانید، در حالت معمول شما نمی‌توانید برای خودتان در تلگرام پیام بفرستید، اما با استفاده از ترفند ساده زیر می‌توانید این قابلیت را به تلگرام خود اضافه کنید.
مسیر زیر را پیش بگیرید تا به صفحه خودتان دسترسی داشته باشید. ابتدا اگر username ندارید، برای خودتان یکی بسازید. برای این منظور مسیر Settings, Info, Username را پیش بگیرید و آن را انتخاب کنید (پیش‌فرض این گزینه None است). نام کاربری دلخواه و البته موجود خود را انتخاب کنید. حال می‌توانید در صفحه یکی از دوستان نزدیکتان این نام کاربری را بعد از علامت @ وارد کنید (مثلا اگر یوزرنیم شما GSM است، بنویسید GSM@) و دکمه ارسال را بزنید. متن تایپ‌شده باید با رنگ آبی نمایش داده شود. با کلیک روی این متن می‌توانید به پروفایل خود بروید و با کلیک روی علامت پیام وارد پی‌وی خود شوید و هرچه می‌خواهد دل تنگتان، بگویید و بنویسید و ارسال کنید!

علاوه بر انتخاب Username و روش بالا راه دیگری هم وجود دارد.

کافی است شماره تلفنی را که با آن در تلگرام عضو شده‌اید در دفترچه تلفن همراه خود با نام خودتان ذخیره کنید تا همانند دوستان جدیدی که به تلگرام می‌پیوندند و شما آنها را در اپلیکیشن تلگرام مشاهده می‌کنید، خودتان را هم در تلگرام خودتان پیدا کنید و برای خودتان پیام و فایل بفرستید.</string>
    <string name="hintcontext2">اگر دقت کرده باشید، هنگامی که در تلگرام تصویری ارسال می‌کنید به صورت اتوماتیک کیفیت تصویر ارسال‌شده پایین می‌آید و درواقع تصویری که گیرنده پیام شما دریافت می‌کند حجم پایین‌تر و قاعدتا کیفیت پایین‌تری دارد. البته این موضوع مزیت است و باعث می‌شود درمجموع تصاویر خیلی سریع‌تر دریافت و مشاهده شوند و حجم اینترنت کمتری نیز مصرف گردد.

اما گاهی قصد دارید تصویری برای فردی ارسال کنید تا او پس از دریافت نسبت به چاپ آن تصویر اقدام کند. اینجاست که باید جلو پایین آمدن کیفیت عکس توسط تلگرام را بگیریم.
درواقع گیرنده پیام باید دقیقا همان فایلی را دریافت کند که شما ارسال کرده‌اید، بدون تغییر اندازه و تغییر کیفیت آن.

برای این منظور ترفند بسیار ساده‌ای وجود دارد: کافی است به جای ارسال عکس روی دکمه ارسال فایل (که آیکونی شبیه سنجاق کاغذ دارد) کلیک کنید و سپس عکس موردنظر خود را از این طریق برای مخاطبتان ارسال کنید و دیگر نگران پایین آمدن کیفیت آن نباشید.</string>
    <string name="hintcontext3">همان طور که می‌دانید، برای دنبال کردن مطالب کانال‌های تلگرامی باید ابتدا عضو آنها (Join) شد. عضویت در کانال موجب می‌شود روزانه صدها و شاید هزاران مطلب و عکس و ویدئو برای شما ارسال شود و علاوه بر آن مدیران کانال می‌توانند لیست اعضای کانال خود را مشاهده و حتی برای آنها پیام ارسال کنند. این موضوع گاهی موجب دریافت پیام‌های اسپم و ناخواسته از افراد غریبه می‌شود.
اما ترفندی مخفی وجود دارد تا بدون آنکه عضو کانال شوید، بتوانید مطالب آن کانال را مشاهده کنید. مدیر کانال نیز نمی‌تواند متوجه استفاده شما از کانال شود و درواقع شما جزو کاربران دنبال‌کننده کانال محسوب نمی‌شوید.

برای این منظور کافی است نام کاربری کانال را به همراه علامت @ در متن چت یکی از دوستان نزدیکتان بنویسید (یا با استفاده از همان ترفند ابتدایی «ارسال به خود» نام کاربری کانال موردنظر را در صفحه چت خودتان تایپ و ارسال کنید). سپس روی آن کلیک کنید تا وارد کانال مورد نظر شوید. حالا مشاهده می‌کنید که بدون اینکه روی دکمه Join کلیک کرده باشید می‌توانید مطالب کانال را ببینید. در متن چت‌های شما هم سابقه‌ای از عضویت شما در کانال و دریافت مطالب جدید به چشم نخواهد خورد.</string>
    <string name="hintcontext4">تلگرام یک لیست مخاطبان مخفی و سرورمحور دارد؛ یعنی اگر در هر دستگاهی که قبلا حساب خود را فعال کرده‌اید مخاطبینی ذخیره کرده باشید، در دیگر دستگاه‌های متصل به حساب تلگرامتان نیز ذخیره می‌شوند، حتی اگر دستگاه شما تازه و بدون مخاطب قبلی باشد!

این موضوع هم یک مزیت و هم یک ضعف بزرگ محسوب می‌شود. ضعف بزرگ آن ناتوانی در حذف از سرور تلگرام است که با استفاده از ترفند زیر این مشکل از بین می‌رود.

برای پاک کردن مخاطب موردنظر تصویر مخاطب را در صفحه چت با او لمس کنید. سپس هنگامی که اطلاعات شخصی مخاطب باز شد، روی علامت سه نقطه در بالای سمت راست صفحه ضربه بزنید و سپس Delete را بزنید تا مخاطب برای همیشه از لیست دوستان شما حذف شود.</string>
    <string name="hintcontext5">اگر به هر دلیل قصد دارید اکانت تلگرامی خود را حذف کنید کافی است ابتدا به آدرس https://my.telegram.org/deactivate بروید و شماره موبایل خود را وارد کنید و روی Next کلیک کنید. در همین لحظه پیامی به اکانت تلگرام شما فرستاده می‌شود که حاوی یک کلمه عبور است.
اکنون کافی است کلمه عبور دریافتی را در قسمت Passwords وارد کنید و روی Sign In کلیک کنید. اکنون به صفحه‌ای منتقل می‌شوید که در آن علت حذف اکانت تلگرام از شما پرسیده می‌شود.

کافی است در بخش  ?Why are you leaving عبارت I don’t use Telegram sometimes (یا هر چیز دیگری) را تایپ کنید و روی گزینه Done کلیک کنید. حالا  برای اطمنیان سوالی از شما پرسیده می‌شود که باید گزینه Yes ,delete my account را انتخاب کنید. اکنون اکانت و سابقه فعالیت شما در تلگرام کاملا پاک می‌شود.</string>
    <string name="hintcontext6">احتمالا به این موضوع دقت کرده‌اید که همواره می‌توانید تصویر آواتار یا همان پروفایل دوستانتان را در تلگرام مشاهده کنید و حتی می‌توانید تصاویر قدیمی‌تر برخی از آنها را که قبلا برای پروفایل‌شان در نظر گرفته بودند نیز مشاهده کنید. اما اگر علاقه‌ای ندارید که کاربران تصاویر پروفایل قبلی شما را مشاهده کنند، ترفند کوچکی وجود دارد.
برای این کار، هر گاه تصمیم به تغییر عکس پروفایل گرفتید، ابتدا عکس قبلی خود را پاک کنید و سپس عکس جدید را انتخاب کنید. برای پاک کردن عکس فعلی خود به بخش تنظیمات بروید و روی علامت دوربین کلیک کنید و گزینه Delete photo را انتخاب کنید. برای انتخاب تصویر جدید نیز به قسمت تنظیمات بروید و روی دوربین کلیک کنید و و تصویر جدید را انتخاب کنید. در این صورت دیگر تصاویر قبلی شما برای دیگران قابل مشاهده نیست.</string>
</resources>