<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textwhite"
    android:orientation="vertical">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/contactus"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/textblack"
        android:textSize="20sp"
        android:id="@+id/contactusText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/textblack"
        android:textSize="12sp"
        android:id="@+id/add"/>

    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="mailus"
        android:text="@string/mailus"
        android:id="@+id/mailus"
        android:background="@color/b3"
        android:textColor="@color/textwhite"
     />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="telegramus"
        android:text="@string/telegramus"
        android:id="@+id/telegramus"
        android:background="@color/b1"
        android:textColor="@color/textwhite"
      />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="recourcesOfApp"
        android:text="@string/resourceTitle"
        android:id="@+id/recourcesOfApp"
        android:background="@color/b4"
        android:textColor="@color/textwhite"
        />

    <Button
        android:id="@+id/returnToHints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:background="@color/b2"
        android:onClick="returnToHints"
        android:text="@string/returnToHints"
        android:textColor="@color/textwhite"
     />

</LinearLayout>
