<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textwhite"
    android:orientation="vertical">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/hints"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hints"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/textblack"
        android:textSize="20sp"
        android:id="@+id/hints"/>





    <Button
        android:id="@+id/hintListButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="hintList"
        android:text="@string/hintsButton"
        android:background="@color/b1"
        android:textColor="@color/textwhite"/>





    <Button
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="menu"
        android:text="@string/menu"
        android:background="@color/b2"
        android:textColor="@color/textwhite"/>

</LinearLayout>
